Unify API documentation, migrate to Swagger, and enhance documentation
Consolidates duplicate API documentation, migrates to OpenAPI 3.0 via Swagger, and adds API validation scripts.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: dfd7d995-eb39-4c6f-aa0e-75c5243b54cd
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/d21cd327-a911-4d90-9840-42248e2ee046/c8892bb1-7197-48ad-a457-3953f9035b84.jpg